# Streamlit-CACER

./: .gitattributes  .gitignore  CACER_page.py  CACER_page_controller.py  CACER_simulator.py  Multivettore_page.py  Multivettore_page_controller.py  README.md  calcoli_validazione.py  controller_functions.py  controller_wrapped_functions.py  main.py  multivector_controller_wrapped_functions.py  package.json  pyproject.toml  run_streamlit.py  stack  streamlit_app.py
.streamlit/: config.toml
cacer_simulator/: common.py
deprecated/: streamlit_app.py
multivector_simulator/: common.py
resources/: Dati_Simulati_di_Consumi_Elettrici_e_Termici.csv  Dati_consumi_elettrici_esempio.csv  Esempio_input_consumi_multienergetico.xlsx  Esempio_input_consumi_trigen.xlsx  Esempio_solo_elettrico.xlsx  PV_data.csv  Prova_input_consumi_PV_cogen.xlsx  Prova_input_consumi_multienergetico.xlsx  Test_trigen.xlsx  Test_trigen2.xlsx  (+7 more)
simlutatore_CER_streamlit/simlutatore_cer_streamlit/: pyproject.toml
simlutatore_CER_streamlit/simlutatore_cer_streamlit/resources/: consumption_PV_example.csv  production_PV_example.csv
simlutatore_CER_streamlit/simlutatore_cer_streamlit/src/: CACER_config.py  User_outputs.py  Users.py  Users_inputs.py  computation_cost_production.py  computations.py  funzione_overproduction.py  self_consumed_energy.py
simlutatore_CER_streamlit/simlutatore_cer_streamlit/views/: 1_🏠Homepage.py
simlutatore_CER_streamlit/simlutatore_cer_streamlit/views/.streamlit/: config.toml
simlutatore_CER_streamlit/simlutatore_cer_streamlit/views/pages/: 2_✅Risultati.py  3_❓FAQ.py
(+36 files in other folders)
