[tool.poetry]
name = "cacer_simulator"
version = "0.1.0"
description = ""
authors = ["Raffy <raffaella.assogna@revoltsrl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipdb = "^0.13.13"
streamlit = "^1.36.0"
image = "^1.5.33"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
