[tool.poetry]
name = "cacer_simulator"
version = "0.1.0"
description = ""
authors = ["Raffy <raffaella.assogna@revoltsrl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipdb = "^0.13.13"
streamlit = "^1.36.0"
image = "^1.5.33"
pillow = "^10.4.0"
pydantic = "^2.8.2"
pendulum = "^3.0.0"
openpyxl = "^3.1.5"
pulp = "^2.9.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.26.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
