[tool.poetry]
name = "simlutatore-cer-streamlit"
version = "0.1.0"
description = ""
authors = ["Raffy <raffaella.assogna@revoltsrl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
